--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ pymongo==3.11.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
 python-dotenv==0.19.2
-python-Levenshtein==0.12.2
+levenshtein==0.20.9
 python-slugify==5.0.2
 pytz==2022.6
 rdflib==6.2.0
